testsuite/tests/match-exception-warnings/no_value_clauses.ml.reference

#     Characters 15-56:
    match f () with exception Not_found -> ()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: None of the patterns in this 'match' expression match values.
# 
