testsuite/tests/match-exception-warnings/no_value_clauses.ml
let test f =
  match f () with exception Not_found -> ()
;;
